minor refactor: remove Runtime.exec deprecation warnings